react app will load, barebones

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Giving users a social-media-style community to share their experiences while engaging in an outdoor (and socially distant) activity",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-react": "parcel client/index.html -d client/dist"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/JamesFThomas/trailr/issues"
   },
-  "homepage": "https://github.com/JamesFThomas/trailr#readme"
+  "homepage": "https://github.com/JamesFThomas/trailr#readme",
+  "dependencies": {
+    "parcel-bundler": "^1.12.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  }
 }
