--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/JamesFThomas/trailr#readme",
   "dependencies": {
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-google-maps": "^9.4.5",
+    "react-scripts": "^3.4.1"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4"
