--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
   },
   "homepage": "https://github.com/JamesFThomas/trailr#readme",
   "dependencies": {
+    "eslint-plugin-jsx-a11y": "^6.3.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.4",
     "parcel-bundler": "^1.12.4",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1"
   },
   "devDependencies": {
