--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "express": "^4.17.1",
+    "mariadb": "^2.4.2",
     "nodemon": "^2.0.4",
     "parcel-bundler": "^1.12.4",
     "react": "^16.13.1",
