--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "express": "^4.17.1",
     "mariadb": "^2.4.2",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
     "parcel-bundler": "^1.12.4",
     "react": "^16.13.1",
