--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/JamesFThomas/trailr#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
     "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
     "parcel-bundler": "^1.12.4",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
