--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Giving users a social-media-style community to share their experiences while engaging in an outdoor (and socially distant) activity",
   "main": "index.js",
   "scripts": {
+    "start": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-react": "parcel client/index.html -d client/dist",
     "start:dev": "nodemon server/index.js"
