--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.19.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "express": "^4.17.1",
+    "lodash": "^4.17.19",
     "mariadb": "^2.4.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
@@ -30,8 +31,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
+    "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "recompose": "^0.30.0"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
