--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/JamesFThomas/trailr#readme",
   "dependencies": {
+    "@brainhubeu/react-carousel": "^1.19.26",
     "body-parser": "^1.19.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "express": "^4.17.1",
