--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
     "parcel-bundler": "^1.12.4",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
