--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@brainhubeu/react-carousel": "^1.19.26",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "jquery": "^3.5.1",
     "lodash": "^4.17.19",
     "mariadb": "^2.4.2",
