--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "popper.js": "^1.16.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
@@ -45,7 +46,6 @@
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
-    "recompose": "^0.30.0",
     "styled-components": "^5.1.1",
     "use-supercluster": "^0.2.8"
   },
