will upload files to GCS bucket succesfully

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/JamesFThomas/trailr#readme",
   "dependencies": {
     "@brainhubeu/react-carousel": "^1.19.26",
+    "@google-cloud/storage": "^5.2.0",
     "@types/googlemaps": "^3.39.11",
     "@types/markerclustererplus": "^2.1.33",
     "body-parser": "^1.19.0",
@@ -31,12 +32,15 @@
     "exifr": "^5.0.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "fast-crc32c": "^2.0.0",
     "google-map-react": "^2.0.8",
     "heic2any": "0.0.3",
     "jquery": "^3.5.1",
     "lodash": "^4.17.19",
     "lodash.isempty": "^4.4.0",
     "mariadb": "^2.4.2",
+    "mime": "^2.4.6",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
@@ -49,7 +53,7 @@
     "react-google-maps": "^9.4.5",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^3.4.2",
     "styled-components": "^5.1.1",
     "use-supercluster": "^0.2.8"
   },
