--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-react": "parcel client/index.html -d client/dist",
-    "start:dev": "nodemon server/index.js"
+    "start:dev": "nodemon server/index.js",
+    "start:prod": "NODE_ENV=PROD nodemon server/index.js"
   },
   "repository": {
     "type": "git",
