--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-react": "parcel client/index.html -d client/dist",
     "start:dev": "nodemon server/index.js",
-    "start:prod": "NODE_ENV=PROD nodemon server/index.js"
+    "start:prod": "NODE_ENV=PROD_LOCAL nodemon server/index.js"
   },
   "repository": {
     "type": "git",
@@ -52,9 +52,11 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
+    "react-hot-loader": "^4.12.21",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
+    "react-static": "^7.4.2",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
