--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@google/markerclusterer": "^2.0.8",
     "@types/googlemaps": "^3.39.11",
     "@types/markerclustererplus": "^2.1.33",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
     "cookie-parser": "^1.4.5",
