--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-bootstrap-icons": "^1.0.3-alpha5",
     "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
     "react-hot-loader": "^4.12.21",
