--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "exifr": "^5.0.3",
