--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "points-cluster": "^0.1.4",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
+    "reac": "0.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-icons": "^1.0.3-alpha5",
