--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-audio-player": "^0.13.0",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-icons": "^1.0.3-alpha5",
     "react-dom": "^16.13.1",
