[Update] eslint.yml

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -29,4 +29,4 @@ jobs:
         uses: stefanoeb/eslint-action@1.0.2
         with:
           # Blob of files to lint
-          files: .
+          files: client/*, config/*, database/*, helpers/*, public/*, routes/*, server/*
