--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,9 +25,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
-    - run: npm run build-react
     - run: npm run start
-      env:
+      env: |
         TRAIL_API_KEY: ${{ secrets.TRAIL_API_KEY }}
         GOOGLE_MAPS_API_KEY: ${{ secrets.GOOGLE_MAPS_API_KEY }}
         GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
