--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,35 +1,35 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+# # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
+# # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+# name: Node.js CI
 
-on:
-  push:
-    branches: [ dev ]
-  pull_request:
-    branches: [ dev ]
+# on:
+#   push:
+#     branches: [ dev ]
+#   pull_request:
+#     branches: [ dev ]
 
-jobs:
-  build:
+# jobs:
+#   build:
 
-    runs-on: ubuntu-latest
+#     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [ 10.x, 12.x, 14.x ]
+#     strategy:
+#       matrix:
+#         node-version: [ 10.x, 12.x, 14.x ]
 
-    steps:
-      env:
-        TRAIL_API_KEY: ${{ secrets.TRAIL_API_KEY }},
-        GOOGLE_MAPS_API_KEY: ${{ secrets.GOOGLE_MAPS_API_KEY }},
-        GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }},
-        GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }},
-        SECRET: ${{ secrets.SECRET }},
-        GCLOUD_BUCKET_NAME: ${{ secrets.GCLOUD_BUCKET_NAME }},
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run start
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Use Node.js ${{ matrix.node-version }}
+#       uses: actions/setup-node@v1
+#       with:
+#         node-version: ${{ matrix.node-version }}
+#     - run: npm ci
+#     - run: npm run start
+#       env:
+#         TRAIL_API_KEY: ${{ secrets.TRAIL_API_KEY }},
+#         GOOGLE_MAPS_API_KEY: ${{ secrets.GOOGLE_MAPS_API_KEY }},
+#         GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }},
+#         GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }},
+#         SECRET: ${{ secrets.SECRET }},
+#         GCLOUD_BUCKET_NAME: ${{ secrets.GCLOUD_BUCKET_NAME }},
