--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "lint": "eslint . --ext .js --ext .jsx",
     "build-react": "parcel client/index.html -d client/dist",
     "start:dev": "nodemon server/index.js",
@@ -43,6 +43,7 @@
     "jquery": "^3.5.1",
     "lodash.isempty": "^4.4.0",
     "mime": "^2.4.6",
+    "mocha": "^8.1.3",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
